{
  "sourceLanguage": "zh-Hans",
  "strings": {
    "tab.plans": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "计划"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Plans"
...
    "insight.title": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "洞悉"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Insights"
...
    "setting.title": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "我的"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
            "state": "translated",
            "value": "言語"
          }
        }
      }
    },
    "language.zh-Hans": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "简体中文"
...
            "state": "translated",
            "value": "簡体中国語"
          }
        }
      }
    },
    "language.en": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "English"
...
            "state": "translated",
            "value": "時間："
          }
        }
      }
    },
    "tab.insights": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "洞悉"
...
            "state": "translated",
            "value": "インサイト"
          }
        }
      }
    },
    "tab.settings": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "我的"
...
            "state": "translated",
            "value": "設定"
          }
        }
      }
    },
    "tab.transactions": {
      "extractionState": "manual",
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "明细"
...
